Refactor codec related code with abstract factory design pattern